Make process local to method